@@ -334,9 +334,14 @@ export default class WCStripeAPI {
 			? 'confirm_change_payment'
 			: 'update_order_status';
 
+		const confirmArgs = {
+			clientSecret,
+			redirect: 'if_required',
+		};
+
 		const confirmAction = isSetupIntent
-			? this.getStripe().confirmCardSetup( clientSecret )
-			: this.getStripe( true ).confirmCardPayment( clientSecret );
+			? this.getStripe().confirmSetup( confirmArgs )
+			: this.getStripe( true ).confirmPayment( confirmArgs );
 
 		const request = confirmAction
 			// ToDo: Switch to an async function once it works with webpack.
